* SVN *

* Add extra site and search vars [Rick]

  {{ site.articles_per_page }}

  {{ search_string }}
  {{ search_count }}

* Identify current section in Liquid [Rick]

  {{ site.current_section }}
  
  {% for section in site.sections %}
    {% if section.current %}
    {% endif %}
  {% endfor %}

* Fix issue where Articles don't allow comments with comment_age = 0 [Rick]