@@ -1,0 +1,23 @@
+module Admin::CachedPagesHelper
+  def pagination_remote_links(paginator, options={}, html_options={})
+     name   = options[:name]    || ActionController::Pagination::DEFAULT_OPTIONS[:name]
+     params = (options[:params] || ActionController::Pagination::DEFAULT_OPTIONS[:params]).clone
+     
+     pagination_links_each(paginator, options) do |n|
+       params[name] = n
+       link_to n.to_s, :page => n
+     end
+  end
+
+  def display_cached_page_date(page)
+    if Date.today == page.updated_at.to_date 
+      if page.updated_at > Time.now - 4.hours
+        "#{time_ago_in_words(page.updated_at).gsub(/about /,'~ ')} ago"
+      else
+        "Today, #{page.updated_at.strftime('%l:%M %p')}"
+      end
+    else
+      page.updated_at.strftime("%b %d, %Y")
+    end
+  end
+end
