@@ -1,0 +1,34 @@
+<% if @cached_pages.size > 0 -%>
+<!-- begin cached pages list -->
+<div class="pages">
+<% if @cached_page_pages.page_count > 1 %>
+Pages: <strong><%= pagination_remote_links @cached_page_pages, :params => { :action => :index } %></strong>
+<% end %>
+</div>
+<h2>Cached Pages</h2><br/>
+<table id="cached-pages-list" cellspacing="0" cellpadding="0">
+  <thead>
+    <tr>
+      <th scope="col" class="small-col">Spacer</th>
+      <th scope="col">URL</th>
+      <th scope="col">Date</th>
+      <th scope="col">Actions</th>
+    </tr>
+  </thead>
+
+  <tbody id="pages">
+    <%= render :partial => 'page', :collection => @cached_pages %>
+  </tbody>
+</table>
+<!-- /end cached pages list -->
+<% else -%>
+  <div class="empty">There currently aren't any pages being cached by Mephisto.</div>
+<% end -%>
+
+<!-- begin pagination -->
+<div id="pagination">
+<% if @cached_page_pages.page_count > 1 %>
+Pages: <strong><%= pagination_links @cached_page_pages, :params => { :action => :index } %></strong>
+<% end %>
+</div>
+<!-- /end pagination -->
