@@ -1,0 +1,1 @@
+page['cached-pages'].replace :file => "admin/cached_pages/pages"
