@@ -31,6 +31,9 @@
             <li><%= link_to 'Sections', :controller => '/admin/sections' %></li>
             <li><%= link_to 'Design',     :controller => '/admin/design' %></li>
             <li><%= link_to "Users",      :controller => "users" %></li>
+            <% if ActionController::Base.perform_caching -%>
+            <li><%= link_to 'Caches', :controller => '/admin/cached_pages' %></li>
+            <% end -%>
           </ul>
         <% end -%>
       </div> 
