@@ -17,8 +17,3 @@ config.action_controller.perform_caching             = false
 
 # Don't care if the mailer can't send
 config.action_mailer.raise_delivery_errors = false
-
-config.after_initialize do
-  require 'application' unless Object.const_defined?(:ApplicationController)
-  ReferencedPageCachingController.enabled = false
-end
